[feat]: Enhanced portfolio with new sections, components, and Tailwind CSS v4 installation guide article in Blog Section

--- a/src/data/install-tailwindcss-v4.mdx
+++ b/src/data/install-tailwindcss-v4.mdx
@@ -7,54 +7,140 @@ date: "2025-10-09"
 
 # How to Install Tailwind CSS v4 (Step-by-Step Guide)
 
-Tailwind CSS v4 is a major release that simplifies the setup process — no more `postcss.config.js`, no `tailwind.config.js` (unless you want one), and no build tools required for many projects.
+Tailwind CSS has become one of the most popular utility-first CSS frameworks for building modern, responsive, and highly customizable web interfaces. With the release of Tailwind CSS v4, developers gain access to new features, improved performance, and enhanced customization options. If you’re ready to get started, this step-by-step guide will walk you through the installation process from scratch.
 
-It’s designed to just work with modern CSS, providing a cleaner, faster developer experience.
+### Step 1: Prerequisites
 
-## 🚀 What’s New in v4 Setup
+Before installing Tailwind CSS v4, make sure you have the following installed on your machine:
 
-✅ No tailwind.config.js by default — Configuration now happens directly in CSS. <br />
-✅ No PostCSS setup required — Tailwind runs natively through its own build engine. <br />
-✅ Up to 100× faster builds — Thanks to the new Rust-based engine. <br />
-✅ CSS-first approach — Themes and tokens can be defined using native CSS variables. <br />
+- Node.js (v16 or above)
+- npm (comes with Node.js) or yarn
+- A code editor like VS Code
 
-### 🧰 Prerequisites
-
-Before starting, make sure you have:
-
-- Node.js 18+
-- npm, yarn, or pnpm
-- A modern frontend project (Next.js, React, or Vite)
-
-If you don’t have one, you can create it using:
+> Tip: Check your Node.js and npm versions by running:
 
 ```bash
-npx create-next-app@latest my-project
-# or
-npm create vite@latest my-project
+node -v
+npm -v
 ```
 
-### 🪄 Step 1: Install Tailwind CSS v4
+### 🪄 Step 2: Create a New Project
+
+You can start by creating a new project folder. Open your terminal and run:
 
 Run the following command in your project directory:
 
 ```
-npm install -D tailwindcss@next
+mkdir tailwind-v4-demo
+cd tailwind-v4-demo
+npm init -y
 ```
 
-_(As of v4, the “next” tag is used until full stable release.)_
+### Step 3: Install Tailwind CSS
 
-This installs the latest Tailwind v4 package and its new lightweight compiler.
+Install Tailwind CSS v4 via npm (or yarn). Run:
 
-### ⚙️ Step 2: Create Your CSS File
-
-If you don’t already have one, create a CSS file for global styles, e.g. src/index.css or app/globals.css.
-
-Then add these Tailwind directives:
-
-```css
-@import "tailwindcss";
+```bash
+npm install -D tailwindcss@latest postcss autoprefixer
 ```
 
-That’s it! ✨ <br />
-You no longer need separate `@tailwind base`, `@tailwind components`, and `@tailwind utilities` lines — Tailwind v4 bundles them automatically.
+Then, generate the Tailwind configuration files:
+
+```bash
+npx tailwindcss init -p
+```
+
+This will create two files in your project root:
+
+- `tailwind.config.js` — Tailwind configuration
+- `postcss.config.js` — PostCSS configuration
+
+### Step 4: Configure Your Template Paths
+
+Open `tailwind.config.js` and specify the files Tailwind should scan for class names. For example:
+
+```js
+/** @type {import('tailwindcss').Config} */
+module.exports = {
+  content: [
+    "./src/**/*.{html,js,ts,jsx,tsx}", // Scan all HTML and JS/TS files
+  ],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+};
+```
+
+> Tip: The `content` array is crucial for purging unused CSS in production.
+
+### Step 5: Add Tailwind Directives to Your CSS
+
+Create a CSS file (e.g., src/styles/tailwind.css) and add the following:
+
+```bash
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+```
+
+- These directives import Tailwind’s base styles, components, and utility classes.
+
+### Step 6: Include Tailwind in Your Project
+
+- <b>For HTML projects:</b>
+Include your compiled CSS file in the `<head>` of your index.html:
+
+```html
+<link href="dist/output.css" rel="stylesheet" />
+```
+
+- <b>For React/Next.js projects:</b>
+  Import the CSS file in your main entry point, e.g., src/index.js or app/layout.js:
+
+```js
+import "./styles/tailwind.css";
+```
+
+### Step 7: Build Your Tailwind CSS
+
+You can build Tailwind CSS using the CLI:
+
+```bash
+npx tailwindcss -i ./src/styles/tailwind.css -o ./dist/output.css --watch
+```
+
+- `-i` → input CSS file
+- `-o` → output CSS file
+- `--watch` → automatically rebuild on changes
+
+This will generate a ready-to-use CSS file with all your Tailwind utilities.
+
+### Step 8: Verify Installation
+
+Create a simple `index.html` file:
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tailwind v4 Demo</title>
+    <link href="dist/output.css" rel="stylesheet" />
+  </head>
+  <body class="bg-gray-100 flex items-center justify-center h-screen">
+    <h1 class="text-4xl font-bold text-blue-600">
+      Tailwind CSS v4 is working!
+    </h1>
+  </body>
+</html>
+```
+
+Open it in a browser. If you see a styled heading, congratulations — Tailwind CSS v4 is successfully installed!
+
+## Conclusion
+
+You’ve now installed Tailwind CSS v4 and set up a project ready for development. Tailwind’s utility-first approach will let you rapidly build responsive and customizable designs without writing traditional CSS.
+
+From here, you can explore advanced features like JIT mode, custom themes, and dark mode to make your project truly modern.
