[fix]: update blog images and references for improved consistency

--- a/src/data/nextjs-basics.mdx
+++ b/src/data/nextjs-basics.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Next.js — The Future of Modern Web Development"
 description: "Tailwind CSS v4 is a major release that brings a more modern, faster, and CSS-native approach to building user interfaces. This article covers what’s new, the pros, cons, and when (or when not) to adopt it."
-image: "public/images/blog/next-js.webp"
+image: "/images/blog/nextjs.webp"
 date: "2025-10-05"
 ---
 
