--- a/src/data/nextjs-vs-reactjs-in-2025.mdx
+++ b/src/data/nextjs-vs-reactjs-in-2025.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Next.js vs React in 2025: What Has Evolved & How to Choose"
 description: "In 2025, the React ecosystem continues to evolve rapidly, and Next.js has become a strong complement (or in many cases, extension) to React, especially for full-stack, SEO-sensitive, or performance-critical web apps. Below is a detailed comparison of both, their strengths, trade-offs, and when to pick one over the other."
-image: "public/tailwind-article-banner.webp"
+image: "/images/blog/next.js-vs-react.webp"
 date: "2025-10-03"
 ---
 
